[package]
name = "mmap-fixed"
version = "0.1.5"
authors = [
  "Elliott Linder <elliott@linder.bz>",
  "Rick Branson <rick@diodeware.com>",
  "The Rust Project Developers"
]
license = "MIT"
readme = "README.md"
description = """
A library for dealing with memory-mapped I/O

This is a fork of the original rust-mmap with updated dependencies and a
fix for the Windows version. This exists only because there are no other
alternative crates for `MAP_FIXED` allocations.
"""

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies]
kernel32-sys = "0.2.2"
winapi = "0.2"

[dev-dependencies]
tempdir = "0.3"
