[package]
name = "mmap-fixed-fixed"
version = "0.1.3"
authors = [
  "Khang <khang06@users.noreply.github.com>",
  "Elliott Linder <elliott@linder.bz>",
  "Rick Branson <rick@diodeware.com>",
  "The Rust Project Developers"
]
license = "MIT"
readme = "README.md"
description = """
A library for dealing with memory-mapped I/O

This is a fork of a fork of the original rust-mmap with updated dependencies and a
fix for the Windows version. This exists only because there are no other
alternative crates for `MAP_FIXED` allocations.
"""
repository = "https://github.com/khang06/rust-mmap-fixed-fixed"
edition = "2018"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_SystemInformation", "Win32_Security"], default-features = false }

[dev-dependencies]
tempdir = "0.3"
